Added Contact section

--- a/src/partials/sitemenu.html
+++ b/src/partials/sitemenu.html
@@ -60,6 +60,11 @@
         </a>
       </li>
 
+      <li id="contact">
+        <a href="/contact/contact_contact.html">
+            <span class="{{#ifequal section 'Contact'}}lz-r-sectionitem{{/ifequal}}">Contact</span>
+        </a>
+      </li>
 
     </ul>
 </div>
