Updated Intro section

--- a/src/partials/intro_menu.html
+++ b/src/partials/intro_menu.html
@@ -7,7 +7,7 @@
     <ul class="vertical menu dropdown">
         <li >
             <a  href="/intro/intro.html">
-                <span class="{{#ifpage 'intro'}}lz-r-topicitem{{/ifpage}}">Welcome</span>
+                <span class="{{#ifpage 'intro'}}lz-r-topicitem{{/ifpage}}">Executive Overview</span>
             </a>
         </li>
         <li>
