Updated for NugetPackageVersions direcctive

--- a/src/partials/generator_menu.html
+++ b/src/partials/generator_menu.html
@@ -42,6 +42,12 @@
         </li>    
 
         <li>
+            <a  href="/generator/generator_nugetpackageversions.html">&nbsp;&nbsp;&nbsp;&nbsp;
+                <span class="{{#ifpage 'generator_nugetpackageversions'}}lz-r-topicitem{{/ifpage}}">NugetPackageVersions</span>
+            </a>
+        </li>            
+
+        <li>
             <a  href="/generator/generator_packagereferences.html">&nbsp;&nbsp;&nbsp;&nbsp;
                 <span class="{{#ifpage 'generator_packagereferences'}}lz-r-topicitem{{/ifpage}}">PackageReferences</span>
             </a>
