Added Visual Studio Mac tutorial

--- a/src/partials/installation_menu.html
+++ b/src/partials/installation_menu.html
@@ -12,7 +12,12 @@
         </li>
         <li >
             <a  href="/installation/installation_visualstudio.html">
-                <span class="{{#ifpage 'installation_visualstudio'}}lz-r-topicitem{{/ifpage}}">Visual Studio Extension</span>
+                <span class="{{#ifpage 'installation_visualstudio'}}lz-r-topicitem{{/ifpage}}">Visual Studio Windows</span>
+            </a>
+        </li>
+        <li >
+            <a  href="/installation/installation_mac_visualstudio.html">
+                <span class="{{#ifpage 'installation_mac_visualstudio'}}lz-r-topicitem{{/ifpage}}">Visual Studio Mac</span>
             </a>
         </li>
 
@@ -21,6 +26,5 @@
                 <span class="{{#ifpage 'installation_netcorecli'}}lz-r-topicitem{{/ifpage}}">.NET CLI Tool</span>
             </a>
         </li>
-
     </ul>
 </div>
