--- a/src/partials/tutorial_menu.html
+++ b/src/partials/tutorial_menu.html
@@ -74,6 +74,68 @@
         </div>
 
         <li >
+            <a  href="/tutorial/tutorial_vsmac_overview.html">
+                <span class="{{#ifpage 'tutorial_vsmac_overview'}}lz-r-topicitem{{/ifpage}}">Visual Studio (Mac)</span>
+            </a>
+        </li>
+        <div style="display: {{#ifequal tutorial 'VSMac'}}inline{{else}}none{{/ifequal}}">
+            <li >
+                <a  href="/tutorial/tutorial_vsmac_petstore.html">&nbsp;&nbsp;&nbsp;
+                    <span class="{{#ifpage 'tutorial_vsmac_petstore'}}lz-r-topicitem{{/ifpage}}">1) PetStore</span>
+                </a>
+            </li>
+
+            <li >
+                <a  href="/tutorial/tutorial_vsmac_controllers.html">&nbsp;&nbsp;&nbsp;
+                    <span class="{{#ifpage 'tutorial_vsmac_controllers'}}lz-r-topicitem{{/ifpage}}">2) Implement Controllers</span>
+                </a>
+            </li>
+
+            <li >
+                <a  href="/tutorial/tutorial_vsmac_configure.html">&nbsp;&nbsp;&nbsp;
+                    <span class="{{#ifpage 'tutorial_vsmac_configure'}}lz-r-topicitem{{/ifpage}}">3) Configure LazyStack</span>
+                </a>
+            </li>
+            
+            <li >
+                <a  href="/tutorial/tutorial_vsmac_publishtoaws.html">&nbsp;&nbsp;&nbsp;
+                    <span class="{{#ifpage 'tutorial_vsmac_publishtoaws'}}lz-r-topicitem{{/ifpage}}">4) Publish to AWS</span>
+                </a>
+            </li>
+
+            <li >
+                <a  href="/tutorial/tutorial_vsmac_testlocalwebapi.html">&nbsp;&nbsp;&nbsp;
+                    <span class="{{#ifpage 'tutorial_vsmac_testlocalwebapi'}}lz-r-topicitem{{/ifpage}}">5) Test Local WebApi</span>
+                </a>
+            </li>
+
+
+            <li >
+                <a  href="/tutorial/tutorial_vsmac_petstoretest.html">&nbsp;&nbsp;&nbsp;
+                    <span class="{{#ifpage 'tutorial_vsmac_petstoretest'}}lz-r-topicitem{{/ifpage}}">6) PetStore Test</span>
+                </a>
+            </li>
+
+            <li >
+                <a  href="/tutorial/tutorial_vsmac_consoleapp.html">&nbsp;&nbsp;&nbsp;
+                    <span class="{{#ifpage 'tutorial_vsmac_consoleapp'}}lz-r-topicitem{{/ifpage}}">7) Console App</span>
+                </a>
+            </li>
+
+            <li >
+                <a  href="/tutorial/tutorial_vsmac_xamarinapp.html">&nbsp;&nbsp;&nbsp;
+                    <span class="{{#ifpage 'tutorial_vsmac_xamarinapp'}}lz-r-topicitem{{/ifpage}}">8) Xamarin App</span>
+                </a>
+            </li>
+
+            <li >
+                <a  href="/tutorial/tutorial_vsmac_blazorapp.html">&nbsp;&nbsp;&nbsp;
+                    <span class="{{#ifpage 'tutorial_vsmac_blazorapp'}}lz-r-topicitem{{/ifpage}}">9) Blazor App</span>
+                </a>
+            </li>
+        </div>
+
+        <li >
             <a  href="/tutorial/tutorial_cli_overview.html">
                 <span class="{{#ifpage 'tutorial_cli_overview'}}lz-r-topicitem{{/ifpage}}">DotNet CLI</span>
             </a>
