--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,10 +6,30 @@
 -->
 
 <div class="cell shrink header medium-cell-block-container">
+
     <div id="header-banner" style="position: relative;height:129px">
     </div>
-    <div style="position:fixed;top:21px;left:16px;border: .125rem solid;border-radius: 13px;background-color: rgba(0, 0, 0, .71);padding: 6px 0px 2px 0px; max-width: 223px;">
-        <h1 style="font-size: 32px;color: rgba(180, 23, 186, 1);font-family: 'Arial Black', 'Arial Bold', Gadget, sans-serif;margin-left: 17px;margin-right: 17px;">LazyStack</h1>
+
+    <div style=
+        "position:fixed; 
+        top: 17px;
+        left: 16px;
+        border: .125rem solid;
+        border-radius: 13px;
+        background-color: rgba(0, 0, 0, .71);
+        width: auto;
+        padding: 2px 10px 7px 10px;
+        ">
+        <span style=
+            "font-size: 32px;
+            font-family: 'Arial Black', 'Arial Bold', Gadget, sans-serif;
+            color: rgba(180, 23, 186, 1);
+            ">
+
+            <img src="/assets/img/lazyface.png" style="max-height: 45px; margin-top: -5px;"/>  
+
+            <span style="margin-left: -5px;">LazyStack</span>
+        </span>
     </div>
-    
+
 </div>
