--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -7,6 +7,12 @@
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta property='og:title' content='LazyStack.io'/>
+  <meta property='og:image' content='assets/img/ThreeGreatTechnologies.png'/>
+  <meta property='og:description' content='LazyStack is a tool that ingests an OpenApi (swagger) REST API specification and generates the AWS Server Application Model (SAM) template and the C# AWS Lambda projects necessary to stand up a fully featured commercial-grade application stack in AWS. It also generates a client application SDK making it simple to call that stack from C# applications.'/>
+  <meta property='og:url' content='https://lazystack.io'/>
+
   <title>LazyStack</title>
   <link rel="stylesheet" href="/assets/css/app.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
