--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <meta property='og:title' content='LazyStack.io'/>
-  <meta property='og:image' content='assets/img/ThreeGreatTechnologies.png'/>
+  <meta property='og:image' content='https://lazystack.io/assets/img/ThreeGreatTechnologies.png'/>
   <meta property='og:description' content='LazyStack is a tool that ingests an OpenApi (swagger) REST API specification and generates the AWS Server Application Model (SAM) template and the C# AWS Lambda projects necessary to stand up a fully featured commercial-grade application stack in AWS. It also generates a client application SDK making it simple to call that stack from C# applications.'/>
   <meta property='og:url' content='https://lazystack.io'/>
 
