--- a/src/partials/installation_menu.html
+++ b/src/partials/installation_menu.html
@@ -25,16 +25,14 @@
             </a>
         </li>
 
-
-        <li >
-            <a  href="/installation/installation_awsmgmtacct.html"> &nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_awsmgmtacct'}}lz-r-topicitem{{/ifpage}}">AWS Mgmt Account Setup</span>
-            </a>
-        </li>
-
         <li >
             <a  href="/installation/installation_awsorgsetup.html"> &nbsp;&nbsp;&nbsp;
                 <span class="{{#ifpage 'installation_awsorgsetup'}}lz-r-topicitem{{/ifpage}}">AWS Org. Setup Part 1</span>
+            </a>
+        </li>
+        <li >
+            <a  href="/installation/installation_awsmgmtacct.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <span class="{{#ifpage 'installation_awsmgmtacct'}}lz-r-topicitem{{/ifpage}}">AWS Mgmt Account Setup</span>
             </a>
         </li>
 
