--- a/src/partials/installation_menu.html
+++ b/src/partials/installation_menu.html
@@ -24,21 +24,32 @@
                 <span class="{{#ifpage 'installation_aws'}}lz-r-topicitem{{/ifpage}}">LazyStack AWS SMF</span>
             </a>
         </li>
-
+        <li >
+            <a  href="/installation/installation_awsdepguide.html"> &nbsp;&nbsp;&nbsp;
+                <span class="{{#ifpage 'installation_awsdepguide'}}lz-r-topicitem{{/ifpage}}">Deployment Overview</span>
+            </a>
+        </li>
         <li >
             <a  href="/installation/installation_awsorgsetup.html"> &nbsp;&nbsp;&nbsp;
                 <span class="{{#ifpage 'installation_awsorgsetup'}}lz-r-topicitem{{/ifpage}}">AWS Org. Setup Part 1</span>
             </a>
         </li>
+
         <li >
-            <a  href="/installation/installation_awsmgmtacct.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_awsmgmtacct'}}lz-r-topicitem{{/ifpage}}">AWS Mgmt Account Setup</span>
+            <a  href="/installation/installation_prerequsites.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <span class="{{#ifpage 'installation_prerequsites'}}lz-r-topicitem{{/ifpage}}">Prerequisites</span>
             </a>
         </li>
 
         <li >
             <a  href="/installation/installation_mgmtscripts.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <span class="{{#ifpage 'installation_mgmtscripts'}}lz-r-topicitem{{/ifpage}}">Mgmt. Scripts Setup</span>
+            </a>
+        </li>
+
+        <li >
+            <a  href="/installation/installation_awsmgmtacct.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <span class="{{#ifpage 'installation_awsmgmtacct'}}lz-r-topicitem{{/ifpage}}">AWS Mgmt Account Setup</span>
             </a>
         </li>
 
