--- a/src/partials/installation_menu.html
+++ b/src/partials/installation_menu.html
@@ -25,11 +25,6 @@
             </a>
         </li>
         <li >
-            <a  href="/installation/installation_awsdepguide.html"> &nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_awsdepguide'}}lz-r-topicitem{{/ifpage}}">Deployment Overview</span>
-            </a>
-        </li>
-        <li >
             <a  href="/installation/installation_awsorgsetup.html"> &nbsp;&nbsp;&nbsp;
                 <span class="{{#ifpage 'installation_awsorgsetup'}}lz-r-topicitem{{/ifpage}}">AWS Org. Setup Part 1</span>
             </a>
@@ -109,7 +104,19 @@
 
         <li >
             <a  href="/installation/installation_awscicdsetupsteps.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_awscicdsetupsteps'}}lz-r-topicitem{{/ifpage}}">CI/CD Setup</span>
+                <span class="{{#ifpage 'installation_awscicdsetupsteps'}}lz-r-topicitem{{/ifpage}}">CI/CD Test Setup</span>
+            </a>
+        </li>
+
+        <li >
+            <a  href="/installation/installation_awscicdsetupsteps2.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <span class="{{#ifpage 'installation_awscicdsetupsteps2'}}lz-r-topicitem{{/ifpage}}">CI/CD Prod Setup</span>
+            </a>
+        </li>
+
+        <li >
+            <a  href="/installation/installation_awsdepguide.html"> &nbsp;&nbsp;&nbsp;
+                <span class="{{#ifpage 'installation_awsdepguide'}}lz-r-topicitem{{/ifpage}}">Deployment Overview</span>
             </a>
         </li>
 
