--- a/src/partials/installation_menu.html
+++ b/src/partials/installation_menu.html
@@ -14,103 +14,60 @@
         </li>
 
         <li >
-            <a  href="/installation/installation_awsexistingacct.html">
-                <span class="{{#ifpage 'installation_awsexistingacct'}}lz-r-topicitem{{/ifpage}}">Quick & Dirty</span>
-            </a>
-        </li>
-
-        <li >
             <a  href="/installation/installation_aws.html">
-                <span class="{{#ifpage 'installation_aws'}}lz-r-topicitem{{/ifpage}}">LazyStack AWS SMF</span>
+                <span class="{{#ifpage 'installation_aws'}}lz-r-topicitem{{/ifpage}}">Configure LazyStack SMF</span>
             </a>
         </li>
         <li >
             <a  href="/installation/installation_awsorgsetup.html"> &nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_awsorgsetup'}}lz-r-topicitem{{/ifpage}}">AWS Org. Setup Part 1</span>
-            </a>
-        </li>
-
-        <li >
-            <a  href="/installation/installation_prerequsites.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_prerequsites'}}lz-r-topicitem{{/ifpage}}">Prerequisites</span>
+                <span class="{{#ifpage 'installation_awsorgsetup'}}lz-r-topicitem{{/ifpage}}">Step 1 - Create AWS Org</span>
             </a>
         </li>
 
         <li >
             <a  href="/installation/installation_mgmtscripts.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_mgmtscripts'}}lz-r-topicitem{{/ifpage}}">Mgmt. Scripts Setup</span>
+                <span class="{{#ifpage 'installation_mgmtscripts'}}lz-r-topicitem{{/ifpage}}">1.1 Configure Mgmt. Workstation</span>
             </a>
         </li>
 
         <li >
             <a  href="/installation/installation_awsmgmtacct.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_awsmgmtacct'}}lz-r-topicitem{{/ifpage}}">AWS Mgmt Account Setup</span>
+                <span class="{{#ifpage 'installation_awsmgmtacct'}}lz-r-topicitem{{/ifpage}}">1.2 Create Mgmt. Acct.</span>
             </a>
         </li>
 
         <li >
             <a  href="/installation/installation_awsorgsetupsteps.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_awsorgsetupsteps'}}lz-r-topicitem{{/ifpage}}">Organization Setup</span>
+                <span class="{{#ifpage 'installation_awsorgsetupsteps'}}lz-r-topicitem{{/ifpage}}">1.3 Create Organization</span>
             </a>
         </li>
 
         <li >
-            <a  href="/installation/installation_awsdevsetupsteps.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_awsdevsetupsteps'}}lz-r-topicitem{{/ifpage}}">Dev Acct Setup</span>
+            <a  href="/installation/installation_awsdevsetupsteps.html"> &nbsp;&nbsp;&nbsp;
+                <span class="{{#ifpage 'installation_awsdevsetupsteps'}}lz-r-topicitem{{/ifpage}}">Step 2 - Create Dev Account</span>
             </a>
         </li>
 
         <li >
-            <a  href="/installation/installation_awsdevprofilesteps.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_awsdevprofilesteps'}}lz-r-topicitem{{/ifpage}}">Dev Profile Setup</span>
+            <a  href="/installation/installation_awstestacctsetupsteps.html"> &nbsp;&nbsp;&nbsp;
+                <span class="{{#ifpage 'installation_awstestacctsetupsteps'}}lz-r-topicitem{{/ifpage}}">Part 3 - Create Test Acct.</span>
+            </a>
+        </li>
+        <li >
+            <a  href="/installation/installation_awscicdsetupsteps.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <span class="{{#ifpage 'installation_awscicdsetupsteps'}}lz-r-topicitem{{/ifpage}}">Step 3.1 - Setup Stack CI/CD</span>
             </a>
         </li>
 
         <li >
-            <a  href="/installation/installation_awsorgsetup2.html"> &nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_awsorgsetup2'}}lz-r-topicitem{{/ifpage}}">AWS Org. Setup Part 2</span>
+            <a  href="/installation/installation_awsprodacctsetupsteps.html"> &nbsp;&nbsp;&nbsp;
+                <span class="{{#ifpage 'installation_awsprodacctsetupsteps'}}lz-r-topicitem{{/ifpage}}">Part 4 - Create Prod Acct.</span>
             </a>
         </li>
 
         <li >
-            <a  href="/installation/installation_awstestousetupsteps.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_awstestousetupsteps'}}lz-r-topicitem{{/ifpage}}">Test OU Setup</span>
-            </a>
-        </li>
-
-        <li >
-            <a  href="/installation/installation_awstestacctsetupsteps.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_awstestacctsetupsteps'}}lz-r-topicitem{{/ifpage}}">Test Acct Setup</span>
-            </a>
-        </li>
-
-        <li >
-            <a  href="/installation/installation_awsprodousetupsteps.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_awsprodousetupsteps'}}lz-r-topicitem{{/ifpage}}">Prod OU Setup</span>
-            </a>
-        </li>
-
-        <li >
-            <a  href="/installation/installation_awsprodacctsetupsteps.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_awsprodacctsetupsteps'}}lz-r-topicitem{{/ifpage}}">Prod Acct Setup</span>
-            </a>
-        </li>
-
-        <li >
-            <a  href="/installation/installation_awscicdsetup.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_awscicdsetup'}}lz-r-topicitem{{/ifpage}}">CI/CD Orverview</span>
-            </a>
-        </li>
-
-        <li >
-            <a  href="/installation/installation_awscicdsetupsteps.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_awscicdsetupsteps'}}lz-r-topicitem{{/ifpage}}">CI/CD Test Setup</span>
-            </a>
-        </li>
-
-        <li >
-            <a  href="/installation/installation_awscicdsetupsteps2.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_awscicdsetupsteps2'}}lz-r-topicitem{{/ifpage}}">CI/CD Prod Setup</span>
+            <a  href="/installation/installation_awscicdsetupsteps2.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <span class="{{#ifpage 'installation_awscicdsetupsteps2'}}lz-r-topicitem{{/ifpage}}">Step 4.1 - Setup Stack CD</span>
             </a>
         </li>
 
@@ -122,9 +79,16 @@
 
         <li >
             <a  href="/installation/installation_devtools.html">
-                <span class="{{#ifpage 'installation_devtools'}}lz-r-topicitem{{/ifpage}}">LazyStack Dev Tools</span>
+                <span class="{{#ifpage 'installation_devtools'}}lz-r-topicitem{{/ifpage}}">Configure Developer Workstation</span>
             </a>
         </li>
+
+        <li >
+            <a  href="/installation/installation_awsdevprofilesteps.html"> &nbsp;&nbsp;&nbsp;
+                <span class="{{#ifpage 'installation_awsdevprofilesteps'}}lz-r-topicitem{{/ifpage}}">Dev Profile Setup</span>
+            </a>
+        </li>
+
 
         <li >
             <a  href="/installation/installation_netcorecli.html">&nbsp;&nbsp;&nbsp;
