--- a/src/partials/installation_menu.html
+++ b/src/partials/installation_menu.html
@@ -85,25 +85,32 @@
 
         <li >
             <a  href="/installation/installation_awsdevprofilesteps.html"> &nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_awsdevprofilesteps'}}lz-r-topicitem{{/ifpage}}">Dev Profile Setup</span>
+                <span class="{{#ifpage 'installation_awsdevprofilesteps'}}lz-r-topicitem{{/ifpage}}">Step 1 - Dev Profile Setup</span>
             </a>
         </li>
 
 
         <li >
             <a  href="/installation/installation_netcorecli.html">&nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_netcorecli'}}lz-r-topicitem{{/ifpage}}">.NET CLI Tool</span>
-            </a>
-        </li>
-        <li >
-            <a  href="/installation/installation_visualstudio.html">&nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_visualstudio'}}lz-r-topicitem{{/ifpage}}">Visual Studio Windows</span>
+                <span class="{{#ifpage 'installation_netcorecli'}}lz-r-topicitem{{/ifpage}}">Step 2 - .NET CLI Tool</span>
             </a>
         </li>
 
         <li >
-            <a  href="/installation/installation_mac_visualstudio.html">&nbsp;&nbsp;&nbsp;
-                <span class="{{#ifpage 'installation_mac_visualstudio'}}lz-r-topicitem{{/ifpage}}">Visual Studio Mac</span>
+            <a  href="/installation/installation_visualstudio.html">&nbsp;&nbsp;&nbsp;
+                <span>Step 3 - Visual Studio IDE</span>
+            </a>
+        </li>
+
+        <li >
+            <a  href="/installation/installation_visualstudio.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <span class="{{#ifpage 'installation_visualstudio'}}lz-r-topicitem{{/ifpage}}">Step 3.1 - VS IDE Windows</span>
+            </a>
+        </li>
+
+        <li >
+            <a  href="/installation/installation_mac_visualstudio.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <span class="{{#ifpage 'installation_mac_visualstudio'}}lz-r-topicitem{{/ifpage}}">Step 3.2 - VS IDE MacOS</span>
             </a>
         </li>
 
