--- a/src/partials/userguide_menu.html
+++ b/src/partials/userguide_menu.html
@@ -23,12 +23,27 @@
 
         <div style="display: {{#ifequal topic 'smf'}}inline{{else}}none{{/ifequal}}">
             <ul>
-            <li>
-                <a href="/userguide/smf_github.html">
-                    <span class="{{#ifpage 'smf_github'}}lz-r-topicitem{{/ifpage}}">GitHub Integration</span>
+                <li>
+                    <a href="/userguide/smf_devsandbox.html">
+                        <span class="{{#ifpage 'smf_devsandbox'}}lz-r-topicitem{{/ifpage}}">Developer Sandbox</span>
+                    </a>
+                </li>
+                <li>
+                <a href="/userguide/smf_gitrepos.html">
+                    <span class="{{#ifpage 'smf_gitrepos'}}lz-r-topicitem{{/ifpage}}">Git Repository Integration</span>
                 </a>
             </li>
-        </ul>
+            <li>
+                <a href="/userguide/smf_devworkflow.html">
+                    <span class="{{#ifpage 'smf_devworkflow'}}lz-r-topicitem{{/ifpage}}">Developer Workflow</span>
+                </a>
+            </li>
+            <li>
+                <a href="/userguide/smf_namedprofiles.html">
+                    <span class="{{#ifpage 'smf_namedprofiles'}}lz-r-topicitem{{/ifpage}}">Named Profiles</span>
+                </a>
+            </li>
+            </ul>
         </div>
 
         <li>
