--- a/src/partials/tutorial_menu.html
+++ b/src/partials/tutorial_menu.html
@@ -192,7 +192,20 @@
         </ul>
         </div>
 
-
+        <li >
+            <a  href="/tutorial/tutorial_smf_overview.html">
+                <span class="{{#ifpage 'tutorial_smf_overview'}}lz-r-topicitem{{/ifpage}}">SMF Tutorial</span>
+            </a>
+        </li>
+        <div style="display: {{#ifequal tutorial 'CLI'}}inline{{else}}none{{/ifequal}}">
+            <ul>
+            <li >
+                <a  href="/tutorial/tutorial_smf_yada.html">
+                    <span class="{{#ifpage 'tutorial_smf_yada'}}lz-r-topicitem{{/ifpage}}">1) Yada</span>
+                </a>
+            </li>
+        </ul>
+        </div>
 
     </ul>
 </div>
