--- a/src/partials/installation_menu.html
+++ b/src/partials/installation_menu.html
@@ -115,7 +115,7 @@
                     <a href="/installation/smf_create_stack.html">
                         
                         <span class="{{#ifpage 'smf_create_stack'}}lz-r-topicitem{{/ifpage}}">Step 4 -
-                            Create Stack</span>
+                            Configure Repo(s)</span>
                     </a>
                 </li>
                 <ul>
