--- a/src/partials/tutorial_menu.html
+++ b/src/partials/tutorial_menu.html
@@ -9,9 +9,10 @@
     <ul class="vertical menu dropdown manual-list">
         <li>
             <a href="/tutorial/tutorial_intro.html">
-                <span class="{{#ifpage 'tutorial_intro'}}lz-r-topicitem{{/ifpage}}">Tutorials</span>
+                <span class="{{#ifpage 'tutorial_intro'}}lz-r-topicitem{{/ifpage}}">LazyStack Tools Tutorials</span>
             </a>
         </li>
+        <ul>
         <li>
             <a href="/tutorial/tutorial_vswin_overview.html">
                 <span class="{{#ifpage 'tutorial_vswin_overview'}}lz-r-topicitem{{/ifpage}}">Visual Studio
@@ -216,6 +217,8 @@
             </ul>
         </div>
 
+    </ul>
+
         <li>
             <a href="/tutorial/tutorial_smf_overview.html">
                 <span class="{{#ifpage 'tutorial_smf_overview'}}lz-r-topicitem{{/ifpage}}">SMF Tutorial</span>
@@ -229,43 +232,38 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/tutorial/tutorial_smf_create_stack.html">
-                        <span class="{{#ifpage 'tutorial_smf_create_stack'}}lz-r-topicitem{{/ifpage}}">2) Create Simple Stack</span>
-                    </a>
-                </li>
-                <li>
                     <a href="/tutorial/tutorial_smf_create_repo.html">
-                        <span class="{{#ifpage 'tutorial_smf_create_repo'}}lz-r-topicitem{{/ifpage}}">3) Create Stack Repository</span>
+                        <span class="{{#ifpage 'tutorial_smf_create_repo'}}lz-r-topicitem{{/ifpage}}">2) Create Stack Repository</span>
                     </a>
                 </li>
                 <li>
-                    <a href="/tutorial/tutorial_smf_install_test_ci_cd">
-                        <span class="{{#ifpage 'tutorial_smf_install_test_ci_cd'}}lz-r-topicitem{{/ifpage}}">4) Install CI/CD</span>
+                    <a href="/tutorial/tutorial_smf_install_cicd.html">
+                        <span class="{{#ifpage 'tutorial_smf_install_cicd'}}lz-r-topicitem{{/ifpage}}">3) Install CI/CD</span>
                     </a>
                 </li>
                 <li>
                     <a href="/tutorial/tutorial_smf_start_feature.html">
-                        <span class="{{#ifpage 'tutorial_smf_start_feature'}}lz-r-topicitem{{/ifpage}}">5) Start Feature Development</span>
+                        <span class="{{#ifpage 'tutorial_smf_start_feature'}}lz-r-topicitem{{/ifpage}}">4) Start Feature Development</span>
                     </a>
                 </li>
                 <li>
                     <a href="/tutorial/tutorial_smf_create_pr.html">
-                        <span class="{{#ifpage 'tutorial_smf_create_pr'}}lz-r-topicitem{{/ifpage}}">6) Create Pull Request</span>
+                        <span class="{{#ifpage 'tutorial_smf_create_pr'}}lz-r-topicitem{{/ifpage}}">5) Create Pull Request</span>
                     </a>
                 </li>
                 <li>
                     <a href="/tutorial/tutorial_smf_update_pr.html">
-                        <span class="{{#ifpage 'tutorial_smf_update_pr'}}lz-r-topicitem{{/ifpage}}">7) Update Pull Request</span>
+                        <span class="{{#ifpage 'tutorial_smf_update_pr'}}lz-r-topicitem{{/ifpage}}">6) Update Pull Request</span>
                     </a>
                 </li>
                 <li>
                     <a href="/tutorial/tutorial_smf_merge_pr.html">
-                        <span class="{{#ifpage 'tutorial_smf_merge_pr'}}lz-r-topicitem{{/ifpage}}">8) Merge Pull Request</span>
+                        <span class="{{#ifpage 'tutorial_smf_merge_pr'}}lz-r-topicitem{{/ifpage}}">7) Merge Pull Request</span>
                     </a>
                 </li>
                 <li>
                     <a href="/tutorial/tutorial_smf_checkout_main.html">
-                        <span class="{{#ifpage 'tutorial_smf_checkout_main'}}lz-r-topicitem{{/ifpage}}">9) Checkout Latest Main</span>
+                        <span class="{{#ifpage 'tutorial_smf_checkout_main'}}lz-r-topicitem{{/ifpage}}">8) Checkout Latest Main</span>
                     </a>
                 </li>
             </ul>
