--- a/src/partials/tutorial_menu.html
+++ b/src/partials/tutorial_menu.html
@@ -227,43 +227,33 @@
         <div style="display: {{#ifequal tutorial 'smf'}}inline{{else}}none{{/ifequal}}">
             <ul>
                 <li>
-                    <a href="/tutorial/tutorial_smf_create_system.html">
-                        <span class="{{#ifpage 'tutorial_smf_create_system'}}lz-r-topicitem{{/ifpage}}">1) Create System</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="/tutorial/tutorial_smf_create_repo.html">
-                        <span class="{{#ifpage 'tutorial_smf_create_repo'}}lz-r-topicitem{{/ifpage}}">2) Create Stack Repository</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="/tutorial/tutorial_smf_install_cicd.html">
-                        <span class="{{#ifpage 'tutorial_smf_install_cicd'}}lz-r-topicitem{{/ifpage}}">3) Install CI/CD</span>
+                    <a href="/tutorial/tutorial_smf_clone_repo.html">
+                        <span class="{{#ifpage 'tutorial_smf_clone_repo'}}lz-r-topicitem{{/ifpage}}">1) Clone Repository</span>
                     </a>
                 </li>
                 <li>
                     <a href="/tutorial/tutorial_smf_start_feature.html">
-                        <span class="{{#ifpage 'tutorial_smf_start_feature'}}lz-r-topicitem{{/ifpage}}">4) Start Feature Development</span>
+                        <span class="{{#ifpage 'tutorial_smf_start_feature'}}lz-r-topicitem{{/ifpage}}">2) Start Feature Development</span>
                     </a>
                 </li>
                 <li>
                     <a href="/tutorial/tutorial_smf_create_pr.html">
-                        <span class="{{#ifpage 'tutorial_smf_create_pr'}}lz-r-topicitem{{/ifpage}}">5) Create Pull Request</span>
+                        <span class="{{#ifpage 'tutorial_smf_create_pr'}}lz-r-topicitem{{/ifpage}}">3) Create Pull Request</span>
                     </a>
                 </li>
                 <li>
                     <a href="/tutorial/tutorial_smf_update_pr.html">
-                        <span class="{{#ifpage 'tutorial_smf_update_pr'}}lz-r-topicitem{{/ifpage}}">6) Update Pull Request</span>
+                        <span class="{{#ifpage 'tutorial_smf_update_pr'}}lz-r-topicitem{{/ifpage}}">4) Update Pull Request</span>
                     </a>
                 </li>
                 <li>
                     <a href="/tutorial/tutorial_smf_merge_pr.html">
-                        <span class="{{#ifpage 'tutorial_smf_merge_pr'}}lz-r-topicitem{{/ifpage}}">7) Merge Pull Request</span>
+                        <span class="{{#ifpage 'tutorial_smf_merge_pr'}}lz-r-topicitem{{/ifpage}}">5) Merge Pull Request</span>
                     </a>
                 </li>
                 <li>
                     <a href="/tutorial/tutorial_smf_checkout_main.html">
-                        <span class="{{#ifpage 'tutorial_smf_checkout_main'}}lz-r-topicitem{{/ifpage}}">8) Checkout Latest Main</span>
+                        <span class="{{#ifpage 'tutorial_smf_checkout_main'}}lz-r-topicitem{{/ifpage}}">6) Checkout Latest Main</span>
                     </a>
                 </li>
             </ul>
