--- a/src/partials/installation_menu.html
+++ b/src/partials/installation_menu.html
@@ -29,17 +29,16 @@
                 </li>
                 <ul>
                     <li>
-                        <a href="/installation/smf_config_mgmt_ws.html"> 
-                            <span class="{{#ifpage 'smf_config_mgmt_ws'}}lz-r-topicitem{{/ifpage}}">1.1 Configure
-                                Mgmt.
-                                Workstation</span>
+                        <a href="/installation/smf_create_github_acct.html"> 
+                            <span class="{{#ifpage 'smf_create_github_acct'}}lz-r-topicitem{{/ifpage}}">1.1
+                                Create GitHub Account</span>
                         </a>
                     </li>
 
                     <li>
                         <a href="/installation/smf_create_mgmt_acct.html"> 
                             <span class="{{#ifpage 'smf_create_mgmt_acct'}}lz-r-topicitem{{/ifpage}}">1.2 Create
-                                Mgmt. 
+                                AWS Mgmt. 
                                 Acct.</span>
                         </a>
                     </li>
@@ -47,18 +46,10 @@
                     <li>
                         <a href="/installation/smf_create_org.html"> 
                             <span class="{{#ifpage 'smf_create_org'}}lz-r-topicitem{{/ifpage}}">1.3
-                                Create
+                                Create AWS
                                 Organization</span>
                         </a>
                     </li>
-
-                    <li>
-                        <a href="/installation/smf_create_github_acct.html"> 
-                            <span class="{{#ifpage 'smf_create_github_acct'}}lz-r-topicitem{{/ifpage}}">1.4
-                                Create GitHub Account</span>
-                        </a>
-                    </li>
-
 
                 </ul>
 
