--- a/src/partials/installation_menu.html
+++ b/src/partials/installation_menu.html
@@ -23,8 +23,7 @@
                 <li>
                     <a href="/installation/smf_create_org_overview.html"> 
                         <span class="{{#ifpage 'smf_create_org_overview'}}lz-r-topicitem{{/ifpage}}">Step 1 - Create
-                            AWS
-                            Org</span>
+                            Organization</span>
                     </a>
                 </li>
                 <ul>
