--- a/src/partials/userguide_menu.html
+++ b/src/partials/userguide_menu.html
@@ -58,6 +58,11 @@
                         <span class="{{#ifpage 'smf_lzupdatedevcreds'}}lz-r-topicitem{{/ifpage}}">LzUpdateDevCreds Script</span>
                     </a>
                 </li>            
+                <li>
+                    <a href="/userguide/smf_lzdeploypipeline.html">
+                        <span class="{{#ifpage 'smf_lzdeploypipeline'}}lz-r-topicitem{{/ifpage}}">LzDeployPipeline Script</span>
+                    </a>
+                </li>            
 
             </ul>
         </div>
