--- a/src/partials/intro_menu.html
+++ b/src/partials/intro_menu.html
@@ -16,7 +16,7 @@
 
                 <li>
                     <a  href="/intro/intro_smf.html" >
-                    <span class="{{#ifpage 'intro_smf'}}lz-r-topicitem{{/ifpage}}">Coordinate</span>
+                    <span class="{{#ifpage 'intro_smf'}}lz-r-topicitem{{/ifpage}}">Collaborate</span>
                     </a>
                 </li>
 
