--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -140,6 +140,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center 70px;
+    background-size: 300px;
 
     // z-index:inherit;
     // position: relative;
@@ -173,6 +174,10 @@
     font-size: 20px;
 }
 
+.card-blurb {
+    font-size: 17px;
+    padding: 10px;
+}
 .card-p-font{
     font-size: 20px;
 }
@@ -222,10 +227,10 @@
     max-width: 405px;
     width: 28vw;
     @include breakpoint (large up) {
-        padding-top: 10px;
-        padding-right: 10px;
-        padding-bottom: 10px;
-        padding-left: 10px;
+        padding-top: 8px;
+        padding-right: 8px;
+        padding-bottom: 8px;
+        padding-left: 8px;
     }
 }
 
