--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -128,6 +128,8 @@
     align-items:center;
     flex-direction:column;
     justify-content: space-between;
+    //align-content: space-between;
+    //flex-wrap: nowrap;
 
     //padding:18px;
     border:4px solid #d5dbdb;
@@ -137,10 +139,10 @@
     //background-color:#221C1C;
     background-color: #3b103bda;
 
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center 70px;
-    background-size: 300px;
+   // background-repeat: no-repeat;
+    //background-size: cover;
+   // background-position: center 70px;
+   // background-size:  auto,  40%;
 
     // z-index:inherit;
     // position: relative;
@@ -166,8 +168,15 @@
     }    
 }
 
+.card-header {
+    flex-grow: 0;
+    flex-shrink: 0;
+    margin: 0px;
+}
+
 .card-title {
     font-size: 25px;
+    max-height: 60px;
 }
 
 .card-text {
@@ -178,6 +187,19 @@
     font-size: 17px;
     padding: 10px;
 }
+
+.card-image {
+    flex-grow: 1 1 auto;
+    padding: 0px;
+    margin: 0px;
+}
+
+.card-image img {
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+}
+
 .card-p-font{
     font-size: 20px;
 }
@@ -187,9 +209,11 @@
     color: #ffffff;
 }
 
+/*
 .card-image{
     object-fit:cover;height:150px;width:300px;margin-bottom:18px;
 }
+*/
 .r-card-image{
     object-fit:cover; height:150px; margin-bottom:10px;
 
