vsmac tut updates

--- a/docs/assets/tutorial/code/PetStoreMobileApp/MainPage.xaml
+++ b/docs/assets/tutorial/code/PetStoreMobileApp/MainPage.xaml
@@ -64,7 +64,7 @@
                             IsTabStop="True"
                             Text="{Binding AuthProcess.Login, Mode=TwoWay}" 
                             ClearButtonVisibility="WhileEditing"
-                            Keyboard="Text"
+                            Keyboard="Plain"
                             ReturnType="Next"
                             IsSpellCheckEnabled="False"
                             IsTextPredictionEnabled="False"
